--- a/src/app/components/user-item/user-item.component.sass
+++ b/src/app/components/user-item/user-item.component.sass
@@ -37,6 +37,17 @@
 .user-item:hover
   cursor: pointer
 
+.intro-message
+  padding: 5px
+  border-radius: 5px
+  background-color: rgba(192, 56, 182, 0.4)
+  margin: 5px
+  max-width: 100%
+  display: inline-block
+  white-space: nowrap
+  overflow: hidden
+  text-overflow: ellipsis
+
 @media only screen and (max-width: 840px)
   .user-item
     width: calc(33% - 10px)
