--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,9 +44,9 @@
     </div>
 
     <div *ngIf="isActiveUser" class="left-menu">
-      <a routerLink="/intros" class="item">
+      <a routerLink="/likes" class="item">
         <fa-icon [icon]="faIntro"></fa-icon>
-        {{ 'Intros' | translate }} <span *ngIf="notifsCount.intro > 0" class="badge rounded-pill bg-danger" style="top: 3px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{notifsCount.intro}}</span>
+        {{ 'Likes' | translate }} <span *ngIf="notifsCount.intro > 0" class="badge rounded-pill bg-danger" style="top: 3px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{notifsCount.intro}}</span>
       </a>
       <a routerLink="/find-people" class="item">
         <fa-icon [icon]="faFindPeople"></fa-icon>
@@ -158,6 +158,8 @@
 </ng-template>
 
 <preferences-modal></preferences-modal>
+
+<like-modal></like-modal>
 
 <notifier-container></notifier-container>
 
