--- a/src/app/components/user-item/user-item.component.html
+++ b/src/app/components/user-item/user-item.component.html
@@ -12,6 +12,9 @@
         <div class="text-truncate" *ngIf="user.mutual_ativities_count" style="line-height: 14px;">{{ user.mutual_ativities_count }} {{ 'mutual activities' | translate }}</div>
         <div class="text-truncate" *ngIf="user.from" style="line-height: 14px; margin-top: 5px">{{ user.from }}</div>
       </div>
+      <div *ngIf="user.intro && 'message' === user.intro.type" class="intro-message">
+        {{ user.intro.message }}
+      </div>
     </div>
 
     <span *ngIf="user.compatability" class="badge badge-pill badge-secondary compatability-badge" title="{{ 'Compatability percentage to me' | translate }}" style="position: absolute; right: 5px; top: 5px;">{{ user.compatability }}%</span>
