Changed bulgarian "verify" translation and added other small fixes
- Changed Bulgarian "верифициран" to "потвърден"
- Fixed a bug for editting empty user description on user profile
- Added verified icon for verified users on likes page
- Added title for like message on user item (if has any message)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,7 +70,7 @@
   <div class="page-container">
     <div *ngIf="isActiveUser && showVerifyAlert" class="alert alert-warning" role="alert" style="position: relative;">
       <a href="javascript:void(0)" (click)="openVerifyModal()" style="color: #4798b5;">
-        {{ 'Verify your profile' | translate }}
+        {{ 'Verify yourself' | translate }}
       </a> {{ 'and show that it is really you!' | translate }}
       <br>
       {{ 'Verified profiles are prioritised in searches and listings.' | translate }}
