--- a/src/app/components/misc/online/online.component.sass
+++ b/src/app/components/misc/online/online.component.sass
@@ -4,7 +4,7 @@ span
   display: inline-block
   width: $size
   height: $size
-  margin-left: 5px
+  margin: 0 5px
   background-color: #25db57
   border-radius: 100%
   vertical-align: middle
