Fixed "compatability" typo to "compatibility"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,9 +60,9 @@
         <fa-icon [icon]="faViews"></fa-icon>
         {{ 'Views' | translate }}
       </a>
-      <a routerLink="/compatabilities" class="item">
-        <fa-icon [icon]="faCompatability"></fa-icon>
-        {{ 'Compatability' | translate }} <span *ngIf="compatabilityCount && 0 < compatabilityCount">({{compatabilityCount}})</span>
+      <a routerLink="/compatibilities" class="item">
+        <fa-icon [icon]="faCompatibility"></fa-icon>
+        {{ 'Compatibility' | translate }} <span *ngIf="compatibilityCount && 0 < compatibilityCount">({{ compatibilityCount }})</span>
       </a>
     </div>
   </div>
