--- a/src/app/components/misc/app-info/app-info.component.html
+++ b/src/app/components/misc/app-info/app-info.component.html
@@ -4,7 +4,7 @@
 <p>
   {{ 'Vinteres is a dating website with the main goal to match people by personality and interests. For building serious relationships.' | translate }}
   <br/><br/>
-  {{ 'Automatically show people with high compatability percentage to you.' | translate }}
+  {{ 'Automatically show people with high compatibility percentage to you.' | translate }}
   <br/><br/>
   {{ 'Completely free.' | translate }}
 </p>
