--- a/src/app/components/user-item/user-item.component.html
+++ b/src/app/components/user-item/user-item.component.html
@@ -17,6 +17,6 @@
       </div>
     </div>
 
-    <span *ngIf="user.compatability" class="badge badge-pill badge-secondary compatability-badge" title="{{ 'Compatability percentage to me' | translate }}" style="position: absolute; right: 5px; top: 5px;">{{ user.compatability }}%</span>
+    <span *ngIf="user.compatibility" class="badge badge-pill badge-secondary compatibility-badge" title="{{ 'Compatibility percentage to me' | translate }}" style="position: absolute; right: 5px; top: 5px;">{{ user.compatibility }}%</span>
   </div>
 </div>
