--- a/src/styles.sass
+++ b/src/styles.sass
@@ -97,5 +97,5 @@ button.like-btn:hover
 input[type="radio"]
   margin-right: 5px
 
-.compatability-badge
+.compatibility-badge
   background-color: #599c61
