Updated login and sign-up pages

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,5 +1,3 @@
-@import "variables.sass"
-
 $contentWidth: 1000px
 
 .page-cont
@@ -88,7 +86,7 @@ $contentWidth: 1000px
     line-height: 40px
     font-size: 20px
     padding: 0 25px
-    color: $mainColor
+    color: #000
     text-decoration: none
     cursor: pointer
 
