--- a/src/app/components/misc/app-title/app-title.component.html
+++ b/src/app/components/misc/app-title/app-title.component.html
@@ -1,6 +1,4 @@
 <div class="cont">
-  <h2>
-    <span class="align-middle">Vinteres</span>
-    <span class="align-middle badge badge-pill badge-primary">Beta</span>
-  </h2>
+  <img src="/assets/logo.png" class="img" />
+  <span class="text">interest</span>
 </div>
