--- a/src/app/components/misc/app-title/app-title.component.sass
+++ b/src/app/components/misc/app-title/app-title.component.sass
@@ -1,16 +1,16 @@
 .cont
-  margin-bottom: 60px
+  text-align: center
+  margin-bottom: 40px
 
-  h2
-    text-align: center
+  .img
+    background-color: #000
+    border-radius: 100%
+    width: 60px
+    vertical-align: middle
 
-  h2
-    span:first-child
-      font-size: 35px
-      font-weight: bold
-      margin-right: 5px
-
-  h2
-    span:nth-child(2)
-      font-size: 12px
-      background-color: purple
+  .text
+    font-weight: bold
+    font-size: 30px
+    vertical-align: middle
+    margin-left: 5px
+    color: #000
