--- a/src/app/components/pages/login-page/login-page.component.sass
+++ b/src/app/components/pages/login-page/login-page.component.sass
@@ -1,17 +1,19 @@
 .page-cont
-  background-color: #fff
+  margin-top: 100px
   padding: 10px
   border-radius: 5px
 
-  .app-info
-    width: 400px
-    margin-right: auto
-    margin-left: 10px
-    position: absolute
-
   .auth-cont
-    width: 400px
+    padding: 30px
+    margin: auto
+    width: 500px
+    max-width: 100%
+    background-color: #fff
     margin-left: auto
+    border-radius: 10px
+
+    h1
+      text-align: center
 
 input
   padding: 25px 15px
@@ -21,20 +23,3 @@ button
 
 .error-inp
   border: 1px solid red
-
-@media only screen and (max-width: 840px)
-  .page-cont
-    .app-info
-      position: static
-      margin: auto
-
-    .auth-cont
-      margin: auto
-
-@media only screen and (max-width: 430px)
-  .page-cont
-    .app-info
-      width: 100%
-
-    .auth-cont
-      width: 100%
