--- a/src/app/components/pages/login-page/login-page.component.html
+++ b/src/app/components/pages/login-page/login-page.component.html
@@ -1,58 +1,53 @@
-<div class="page-cont shadow">
+<div class="page-cont">
   <app-title></app-title>
-  <div class="app-info">
-    <app-info></app-info>
-  </div>
 
-  <div class="auth-cont">
-    <div style="padding: 10px">
-      <h1 i18n>{{ 'Sign in' | translate }}</h1>
+  <div class="auth-cont shadow">
+    <h1>{{ 'Sign in' | translate }}</h1>
 
-      <form (ngSubmit)="login(loginForm)" #loginForm="ngForm">
-        <div class="form-group inp-cont">
-          <input type="text"
-                 class="form-control"
-                 placeholder="{{ 'Email' | translate }}"
-                 name="username"
-                 [(ngModel)]="loginData.username"
-                 [ngClass]="{'error-inp': ((username.dirty || username.touched) && !username.valid)}"
-                 #username="ngModel"
-                 [readonly]="loading"
-                 required>
-          <small class="text-danger" *ngIf="(username.dirty || username.touched) && !username.valid">
-            {{ 'Invalid email' | translate }}
-          </small>
-        </div>
-        <div class="form-group inp-cont">
-          <input type="password"
-                 name="password"
-                 class="form-control auth-inp"
-                 placeholder="{{ 'Password' | translate }}"
-                 [(ngModel)]="loginData.password"
-                 [ngClass]="{'error-inp': ((password.dirty || password.touched) && !password.valid)}"
-                 #password="ngModel"
-                 [readonly]="loading"
-                 required>
-          <small small class="text-danger" *ngIf="(password.dirty || password.touched) && !password.valid">
-            <div *ngIf="password.errors.required">{{ 'Invalid password' | translate }}</div>
-            <div *ngIf="password.errors.invalidCredentials">{{ 'Invalid email or password' | translate }}</div>
-            <div *ngIf="password.errors.serverError">Server error.</div>
-          </small>
-        </div>
-
-        <div class="form-group inp-cont">
-          <input type="checkbox"
-                 [(ngModel)]="loginData.remember"
-                 name="remember"
-                 #remember="ngModel"
-                 [readonly]="loading"/>
-          <span style="margin-left: 5px;">{{ 'Remember' | translate }}</span>
-        </div>
-
-        <button class="btn btn-outline-primary" type="submit" [disabled]="loading">{{ 'Login' | translate }}</button>
-      <div style="margin: 15px 0">
-        {{ 'Or you can' | translate }} <a routerLink="/sign-up">{{ 'sign up here' | translate }}</a> {{ 'if you don\'t have an account.' | translate }}
+    <form (ngSubmit)="login(loginForm)" #loginForm="ngForm">
+      <div class="form-group inp-cont">
+        <input type="text"
+               class="form-control"
+               placeholder="{{ 'Email' | translate }}"
+               name="username"
+               [(ngModel)]="loginData.username"
+               [ngClass]="{'error-inp': ((username.dirty || username.touched) && !username.valid)}"
+               #username="ngModel"
+               [readonly]="loading"
+               required>
+        <small class="text-danger" *ngIf="(username.dirty || username.touched) && !username.valid">
+          {{ 'Invalid email' | translate }}
+        </small>
       </div>
-    </form>
-  </div>
+      <div class="form-group inp-cont">
+        <input type="password"
+               name="password"
+               class="form-control auth-inp"
+               placeholder="{{ 'Password' | translate }}"
+               [(ngModel)]="loginData.password"
+               [ngClass]="{'error-inp': ((password.dirty || password.touched) && !password.valid)}"
+               #password="ngModel"
+               [readonly]="loading"
+               required>
+        <small small class="text-danger" *ngIf="(password.dirty || password.touched) && !password.valid">
+          <div *ngIf="password.errors.required">{{ 'Invalid password' | translate }}</div>
+          <div *ngIf="password.errors.invalidCredentials">{{ 'Invalid email or password' | translate }}</div>
+          <div *ngIf="password.errors.serverError">Server error.</div>
+        </small>
+      </div>
+
+      <div class="form-group inp-cont">
+        <input type="checkbox"
+               [(ngModel)]="loginData.remember"
+               name="remember"
+               #remember="ngModel"
+               [readonly]="loading"/>
+        <span style="margin-left: 5px;">{{ 'Remember' | translate }}</span>
+      </div>
+
+      <button class="btn btn-outline-primary" type="submit" [disabled]="loading">{{ 'Login' | translate }}</button>
+    <div style="margin: 15px 0">
+      {{ 'Or you can' | translate }} <a routerLink="/sign-up">{{ 'sign up here' | translate }}</a> {{ 'if you don\'t have an account.' | translate }}
+    </div>
+  </form>
 </div>
