--- a/src/app/components/pages/sign-up-page/sign-up-page.component.html
+++ b/src/app/components/pages/sign-up-page/sign-up-page.component.html
@@ -1,101 +1,95 @@
-<div class="page-cont shadow-sm">
+<div class="page-cont">
   <app-title></app-title>
 
-  <div class="app-info">
-    <app-info></app-info>
-  </div>
-
   <div class="auth-cont">
-    <div style="padding: 10px">
-      <h1>{{ 'Sign up' | translate }}</h1>
-      <div *ngIf="!showForm">
-        <div>User created successfully</div>
-        <button class="btn btn-light" type="button" (click)="login()">Go to login</button>
-      </div>
+    <h1>{{ 'Sign up' | translate }}</h1>
+    <div *ngIf="!showForm">
+      <div>User created successfully</div>
+      <button class="btn btn-light" type="button" (click)="login()">Go to login</button>
+    </div>
 
-      <div *ngIf="showForm">
-        <form (ngSubmit)="signup(registerForm)" #registerForm="ngForm" [formGroup]="form">
-          <div class="form-group inp-cont">
-            <input type="email"
-                   class="form-control"
-                   name="email"
-                   placeholder="{{ 'Email' | translate }}"
-                   formControlName="email"
-                   [ngClass]="{'error-inp': ((email.dirty || email.touched) && !email.valid)}"
-                   [readonly]="loading"
-                   required>
+    <div *ngIf="showForm">
+      <form (ngSubmit)="signup(registerForm)" #registerForm="ngForm" [formGroup]="form">
+        <div class="form-group inp-cont">
+          <input type="email"
+                 class="form-control"
+                 name="email"
+                 placeholder="{{ 'Email' | translate }}"
+                 formControlName="email"
+                 [ngClass]="{'error-inp': ((email.dirty || email.touched) && !email.valid)}"
+                 [readonly]="loading"
+                 required>
 
-            <small class="text-danger" *ngIf="(email.dirty || email.touched) && !email.valid" class="text-danger">
-              <!-- <div *ngIf="email.hasError('required')">Email is required.</div> -->
-              <div *ngIf="email.hasError('email') || email.hasError('required')">{{ 'Invalid email' | translate }}</div>
-              <div *ngIf="email.hasError('exists')">{{ 'Email is already registered' | translate }}</div>
-            </small>
-          </div>
-          <div class="form-group inp-cont">
-            <input type="text"
-                   class="form-control"
-                   name="name"
-                   placeholder="{{ 'Name' | translate }}"
-                   formControlName="name"
-                   [ngClass]="{'error-inp': ((name.dirty || name.touched) && !name.valid)}"
-                   [readonly]="loading"
-                   required>
-            <small class="text-danger" *ngIf="(name.dirty || name.touched) && !name.valid" class="text-danger">
-              {{ 'Invalid name' | translate }}
-            </small>
-          </div>
-          <div class="form-group inp-cont">
-            <input type="password"
-                   class="form-control auth-inp"
-                   name="password"
-                   placeholder="{{ 'Password' | translate }}"
-                   formControlName="password"
-                   [ngClass]="{'error-inp': ((password.dirty || password.touched) && !password.valid)}"
-                   [readonly]="loading"
-                   required>
+          <small class="text-danger" *ngIf="(email.dirty || email.touched) && !email.valid" class="text-danger">
+            <!-- <div *ngIf="email.hasError('required')">Email is required.</div> -->
+            <div *ngIf="email.hasError('email') || email.hasError('required')">{{ 'Invalid email' | translate }}</div>
+            <div *ngIf="email.hasError('exists')">{{ 'Email is already registered' | translate }}</div>
+          </small>
+        </div>
+        <div class="form-group inp-cont">
+          <input type="text"
+                 class="form-control"
+                 name="name"
+                 placeholder="{{ 'Name' | translate }}"
+                 formControlName="name"
+                 [ngClass]="{'error-inp': ((name.dirty || name.touched) && !name.valid)}"
+                 [readonly]="loading"
+                 required>
+          <small class="text-danger" *ngIf="(name.dirty || name.touched) && !name.valid" class="text-danger">
+            {{ 'Invalid name' | translate }}
+          </small>
+        </div>
+        <div class="form-group inp-cont">
+          <input type="password"
+                 class="form-control auth-inp"
+                 name="password"
+                 placeholder="{{ 'Password' | translate }}"
+                 formControlName="password"
+                 [ngClass]="{'error-inp': ((password.dirty || password.touched) && !password.valid)}"
+                 [readonly]="loading"
+                 required>
 
-            <small class="text-danger" *ngIf="(password.dirty || password.touched) && !password.valid" class="text-danger">
-              <div class="alert alert-warning">
-                <div class="pwd-item">
-                  <fa-icon *ngIf="password.value.length >= 8" [icon]="faCheck"></fa-icon>
-                  {{ 'Enter' | translate }} 8+ {{ 'symbols' | translate }}
-                </div>
-                <!-- <div class="pwd-item">
-                  <fa-icon *ngIf="hasUppercase(password.value)" [icon]="faCheck"></fa-icon> [A-Z]
-                </div>
-                <div class="pwd-item">
-                  <fa-icon *ngIf="hasLowercase(password.value)" [icon]="faCheck"></fa-icon> [a-z]
-                </div>
-                <div class="pwd-item">
-                  <fa-icon *ngIf="hasNumber(password.value)" [icon]="faCheck"></fa-icon> [0-9]
-                </div>
-                <div class="pwd-item">
-                  <fa-icon *ngIf="hasSpecialChar(password.value)" [icon]="faCheck"></fa-icon> [#?!@$%^&*-]
-                </div> -->
+          <small class="text-danger" *ngIf="(password.dirty || password.touched) && !password.valid" class="text-danger">
+            <div class="alert alert-warning">
+              <div class="pwd-item">
+                <fa-icon *ngIf="password.value.length >= 8" [icon]="faCheck"></fa-icon>
+                {{ 'Enter' | translate }} 8+ {{ 'symbols' | translate }}
               </div>
-              <div>{{ 'Invalid password' | translate }}</div>
-            </small>
-          </div>
-          <div class="form-group inp-cont">
-            <input type="password"
-                   class="form-control auth-inp"
-                   name="confirmPassword"
-                   placeholder="{{ 'Confirm password' | translate }}"
-                   formControlName="confirmPassword"
-                   [ngClass]="{'error-inp': ((confirmPassword.dirty || confirmPassword.touched) && !confirmPassword.valid)}"
-                   [readonly]="loading"
-                   required>
+              <!-- <div class="pwd-item">
+                <fa-icon *ngIf="hasUppercase(password.value)" [icon]="faCheck"></fa-icon> [A-Z]
+              </div>
+              <div class="pwd-item">
+                <fa-icon *ngIf="hasLowercase(password.value)" [icon]="faCheck"></fa-icon> [a-z]
+              </div>
+              <div class="pwd-item">
+                <fa-icon *ngIf="hasNumber(password.value)" [icon]="faCheck"></fa-icon> [0-9]
+              </div>
+              <div class="pwd-item">
+                <fa-icon *ngIf="hasSpecialChar(password.value)" [icon]="faCheck"></fa-icon> [#?!@$%^&*-]
+              </div> -->
+            </div>
+            <div>{{ 'Invalid password' | translate }}</div>
+          </small>
+        </div>
+        <div class="form-group inp-cont">
+          <input type="password"
+                 class="form-control auth-inp"
+                 name="confirmPassword"
+                 placeholder="{{ 'Confirm password' | translate }}"
+                 formControlName="confirmPassword"
+                 [ngClass]="{'error-inp': ((confirmPassword.dirty || confirmPassword.touched) && !confirmPassword.valid)}"
+                 [readonly]="loading"
+                 required>
 
-            <small class="text-danger" *ngIf="(confirmPassword.dirty || confirmPassword.touched) && !confirmPassword.valid" class="text-danger">
-              {{ 'Confirm password' | translate }}
-            </small>
-          </div>
-          <button class="btn btn-outline-primary" type="submit" [disabled]="loading">{{ 'Sign up' | translate }}</button>
-          <div style="margin: 15px 0">
-            {{ 'If you already have an account you can' | translate }} <a routerLink="/login">{{ 'sign in here' | translate }}</a>.
-          </div>
-        </form>
-      </div>
+          <small class="text-danger" *ngIf="(confirmPassword.dirty || confirmPassword.touched) && !confirmPassword.valid" class="text-danger">
+            {{ 'Confirm password' | translate }}
+          </small>
+        </div>
+        <button class="btn btn-outline-primary" type="submit" [disabled]="loading">{{ 'Sign up' | translate }}</button>
+        <div style="margin: 15px 0">
+          {{ 'If you already have an account you can' | translate }} <a routerLink="/login">{{ 'sign in here' | translate }}</a>.
+        </div>
+      </form>
     </div>
   </div>
 </div>
