--- a/src/app/components/pages/settings-page/settings-page.component.html
+++ b/src/app/components/pages/settings-page/settings-page.component.html
@@ -7,7 +7,7 @@
         <a [ngClass]="{'active' : ('account_info' === activeTab)}" (click)="changeTab('account_info')">{{ 'Account Info' | translate }}</a>
         <a [ngClass]="{'active' : ('profile_info' === activeTab)}" (click)="changeTab('profile_info')">{{ 'Profile Info' | translate }}</a>
         <a [ngClass]="{'active' : ('security' === activeTab)}" (click)="changeTab('security')">{{ 'Security' | translate }}</a>
-        <a [ngClass]="{'active' : ('account' === activeTab)}" (click)="changeTab('account')">{{ 'Account' | translate }}</a>
+        <a [ngClass]="{'active' : ('account' === activeTab)}" (click)="changeTab('account')">{{ 'Deactivate Account' | translate }}</a>
       </div>
     </div>
   </div>
