Profile question updates
- Added arrow on question listing if has more than 1 question
- When you click the question - open edit dialog

--- a/src/app/components/misc/app-title/app-title.component.html
+++ b/src/app/components/misc/app-title/app-title.component.html
@@ -1,4 +1,4 @@
 <div class="cont">
   <img src="/assets/logo.png" class="img" />
-  <span class="text">interest</span>
+  <span class="text">interes</span>
 </div>
