--- a/src/app/components/pages/user-page/user-page.component.sass
+++ b/src/app/components/pages/user-page/user-page.component.sass
@@ -74,6 +74,24 @@
     border-radius: 5px
     cursor: default
 
+.question-cont
+  padding: 15px
+  background-color: #fff
+  margin-bottom: 30px
+  position: relative
+
+  .edit-btn
+    position: absolute
+    right: 0
+    top: 0
+
+  .question-listing-title
+    &:hover
+      cursor: pointer
+
+    .icon
+      margin-left: 5px
+
 .sep
   position: relative
   border-top: 1px solid rgba(46,62,72,.12)
