Changed login/sign-up page design
- Added background image
- Removed any text
- Only form left

--- a/src/app/components/misc/app-title/app-title.component.html
+++ b/src/app/components/misc/app-title/app-title.component.html
@@ -1,4 +1,5 @@
 <div class="cont">
   <img src="/assets/logo.png" class="img" />
   <span class="text">interes</span>
+  <h5 style="margin-top: 20px; font-weight: bold;">{{ 'Dating by personality and interests.' | translate }}</h5>
 </div>
