--- a/src/app/components/pages/sign-up-page/sign-up-page.component.html
+++ b/src/app/components/pages/sign-up-page/sign-up-page.component.html
@@ -1,7 +1,10 @@
+<div class="bg"></div>
+<div class="overlay"></div>
+
 <div class="page-cont">
   <app-title></app-title>
 
-  <div class="auth-cont">
+  <div class="auth-cont shadow">
     <h1>{{ 'Sign up' | translate }}</h1>
     <div *ngIf="!showForm">
       <div>User created successfully</div>
