--- a/src/app/components/misc/app-title/app-title.component.sass
+++ b/src/app/components/misc/app-title/app-title.component.sass
@@ -2,8 +2,10 @@
   text-align: center
   margin-bottom: 40px
 
+  color: #fff
+
   .img
-    background-color: #000
+    background-color: #fff
     border-radius: 100%
     width: 60px
     vertical-align: middle
@@ -13,4 +15,4 @@
     font-size: 30px
     vertical-align: middle
     margin-left: 5px
-    color: #000
+    color: #fff
