--- a/src/app/components/pages/sign-up-page/sign-up-page.component.sass
+++ b/src/app/components/pages/sign-up-page/sign-up-page.component.sass
@@ -1,7 +1,29 @@
+.bg
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  background-image: url(/assets/bg.jpeg)
+  -webkit-background-size: cover
+  -moz-background-size: cover
+  -o-background-size: cover
+
+.overlay
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  background: rgba(0, 0, 0, .4)
+
 .page-cont
   margin-top: 100px
   padding: 10px
   border-radius: 5px
+  position: absolute
+  right: 0
+  left: 0
 
   .auth-cont
     padding: 30px
